--- a/PrimeiroSite/Views/Contato/Criar.cshtml
+++ b/PrimeiroSite/Views/Contato/Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ContatoModel;
+@{
     ViewData["Title"] = "Criar contato";
 }
 <div class="text-center">
@@ -8,18 +9,18 @@
 
 </div>
 
-<form>
+<form asp-controller="Contato" asp-action="Criar" method="post">
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" id="nome" placeholder="Digite o nome">
+        <input type="text" asp-for="Nome" class="form-control" id="nome" placeholder="Digite o nome">
     </div>
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" class="form-control" id="nome" placeholder="Digite o E-mail">
+        <input type="email" asp-for="Email" class="form-control" id="nome" placeholder="Digite o E-mail">
     </div>
     <div class="form-group">
         <label for="telefone">Telefone</label>
-        <input type="text" class="form-control" id="telefone" placeholder="Digite o Telefone">
+        <input type="text" asp-for="Telefone" class="form-control" id="telefone" placeholder="Digite o Telefone">
     </div>
     <br/>
     <button type="submit" class="btn btn-primary btn-lg w-100">Adicionar</button>
