--- a/PrimeiroSite/Views/Contato/ApagarConfirmacao.cshtml
+++ b/PrimeiroSite/Views/Contato/ApagarConfirmacao.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Confirmação de Apagar Contato";
 }
 <div class="text-center">
-    <h3>Deseja realmente apagar o contato?</h3>
+    <h3>Deseja realmente apagar o contato: (@Model.Nome)?</h3>
 </div>
 <a class="btn btn-primary btn-block" asp-controller="Contato" asp-action="Index">Cancelar Exclusão</a>
-<a class="btn btn-secondary btn-block" asp-controller="Contato" asp-action="Apagar">Confirmar Exclusão</a>
+<a class="btn btn-secondary btn-block" asp-controller="Contato" asp-action="Apagar" asp-route-id="@Model.Id">Confirmar Exclusão</a>
