--- a/PrimeiroSite/Views/Contato/Editar.cshtml
+++ b/PrimeiroSite/Views/Contato/Editar.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Editar contato";
 }
 <div class="text-center">
@@ -8,20 +9,22 @@
 
 </div>
 
-<form>
+<form asp-controller="Contato" asp-action="Alterar" method="post">
+    <input type="hidden" asp-for="Id"/>
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" id="nome" placeholder="Digite o nome">
+        <input type="text" asp-for="Nome" class="form-control" id="nome" placeholder="Digite o nome">
     </div>
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" class="form-control" id="nome" placeholder="Digite o E-mail">
+        <input type="email" asp-for="Email" class="form-control" id="nome" placeholder="Digite o E-mail">
     </div>
     <div class="form-group">
         <label for="telefone">Telefone</label>
-        <input type="text" class="form-control" id="telefone" placeholder="Digite o Telefone">
+        <input type="text" asp-for="Telefone" class="form-control" id="telefone" placeholder="Digite o Telefone">
     </div>
-
-    <button type="submit" class="btn btn-primary btn-block">Adicionar</button>
-    <a class="btn btn-secondary btn-block" asp-controller="Contato" asp-action="Index">Voltar</a>
+    <br />
+    <button type="submit" class="btn btn-primary btn-lg w-100">Alterar</button>
+    <br /><br />
+    <a class="btn btn-secondary btn-lg w-100" asp-controller="Contato" asp-action="Index">Voltar</a>
 </form>
